basic-deployment-helm/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myplant-svc
spec:
  selector:
    app: myplant
  ports:
  - port: 80
    targetPort: 80
