basic-deployment-helm/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myplant-igs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - planting-k8s.devith.it.com
      secretName: planting-tls
  rules:
  - host: planting-k8s.devith.it.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myplant-svc
            port: 
              number: 80
